<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".calculator.CalculatorActivity">

    <!--  formula  -->
    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:textColor="@color/soft_purple"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="formula" />


    <!--  Result  -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula" />


    <!--ButtonLayout-->
    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">
        <!--  Buttons  -->

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ac_desc"
            android:src="@drawable/ac" />

        <ImageButton
            android:id="@+id/toggle_negative"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/toggle_neg_desc"
            android:src="@drawable/toggle_negative" />

        <ImageButton
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/percentage_desc"
            android:src="@drawable/percentage" />

        <ImageButton
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/divide_desc"
            android:src="@drawable/divider" />

        <ImageButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/seven_desc"
            android:src="@drawable/seven" />

        <ImageButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eight_desc"
            android:src="@drawable/eight" />

        <ImageButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nine_desc"
            android:src="@drawable/nine" />

        <ImageButton
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/multiply"
            android:src="@drawable/multiply" />

        <ImageButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/four_desc"
            android:src="@drawable/four" />

        <ImageButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/five_desc"
            android:src="@drawable/five" />

        <ImageButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/six_desc"
            android:src="@drawable/six" />

        <ImageButton
            android:id="@+id/mines"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/subtraction_desc"
            android:src="@drawable/subtraction" />

        <ImageButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/one_desc"
            android:src="@drawable/one" />

        <ImageButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/two_desc"
            android:src="@drawable/two" />

        <ImageButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/three_desc"
            android:src="@drawable/three" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/plus"
            android:src="@drawable/addition" />

        <ImageButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/zero_desc"
            android:src="@drawable/zero" />

        <ImageButton
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/decimal_add_desc"
            android:src="@drawable/decimal_add" />

        <ImageButton
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equal_desc"
            android:src="@drawable/equal" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>