<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bmi_colorBackgroundPrimary"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".bmicalculator.BmiResultActivity">


    <TextView
        android:id="@+id/tvTitleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_result"
        android:textSize="28sp"
        android:textColor="@color/bmi_colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/viewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleResult">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/bmi_your_bmi"
                android:textColor="@color/bmi_colorTextPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBMIResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/bmi_underweight"
                android:textColor="@color/bmi_colorTextSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_initial_height"
                android:textColor="@color/bmi_colorTextSecondary"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsBMIResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="0.1"
                android:valueFrom="17"
                android:valueTo="60" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_recommendation_title"
        android:textColor="@color/bmi_colorTextSecondary"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/viewRecomendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewResult" />

    <androidx.cardview.widget.CardView
        android:id="@+id/viewRecomendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnRecalculate"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvBMIResultDetail"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="16dp"
            android:text="@string/bmi_underweight_recommendation"
            android:textColor="@color/bmi_colorTextSecondary"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/bmi_colorTextSecondary"
        android:text="@string/bmi_recalculate"
        android:textColor="@color/bmi_colorBackgroundPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>