<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bmi_colorBackgroundPrimary"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".bmicalculator.BmiCalculatorActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/bmi_app_title"
        android:src="@drawable/ic_bmi_app"
        app:layout_constraintBottom_toTopOf="@id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/bmi_app_title"
        android:textStyle="italic"
        android:textColor="@color/bmi_colorTextPrimary"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@id/viewMale"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Card View Male-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundTertiary"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/bmi_male"
                android:src="@drawable/ic_male"
                app:tint="@color/bmi_colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_male"
                android:textColor="@color/bmi_colorTextPrimary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--Card View Female-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:contentDescription="@string/bmi_female"
                android:src="@drawable/ic_female"
                app:tint="@color/bmi_colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bmi_female"
                android:textColor="@color/bmi_colorTextPrimary" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <!--Card View Height-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_height"
                android:textColor="@color/bmi_colorTextPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/bmi_colorPrimaryDark"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <!--Card View Weight-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_weight"
                android:textColor="@color/bmi_colorTextPrimary" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="@color/bmi_colorTextPrimary"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="60" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/bmi_colorTextSecondary"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/bmi_colorBackgroundPrimary" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/bmi_colorTextSecondary"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/bmi_colorBackgroundPrimary" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <!--Card View Age-->
    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/bmi_colorBackgroundSecondary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewWeight"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_age"
                android:textColor="@color/bmi_colorTextPrimary" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="@color/bmi_colorTextPrimary"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="21" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/bmi_colorTextSecondary"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/bmi_colorBackgroundPrimary" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/bmi_colorTextSecondary"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/bmi_colorBackgroundPrimary" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/bmi_colorTextSecondary"
        android:text="@string/bmi_calculate"
        android:textColor="@color/bmi_colorBackgroundPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAge" />

</androidx.constraintlayout.widget.ConstraintLayout>